--- a/src/components/NavPage.module.css
+++ b/src/components/NavPage.module.css
@@ -89,6 +89,7 @@
   cursor: pointer;
   color: var(--secondaryText);
   transition: color 0.3s ease;
+  transform: translateY(3px);
 }
 
 .searchBox:hover {
